--- a/src/components/Login/loginForm.module.css
+++ b/src/components/Login/loginForm.module.css
@@ -1,13 +1,9 @@
 form {
-    @apply bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4
+    @apply bg-white shadow-md rounded px-8 pt-6 pb-8 m-4
 }
 
 label {
     @apply block text-gray-700 text-sm font-bold mb-2
-}
-
-input {
-    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight
 }
 
 a {
