--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,19 @@ label {
 a {
     @apply text-blue-500 text-xs
 }
+
+.btn {
+    @apply text-white font-bold py-2 px-4 rounded
+}
+
+.btnPrimary {
+    @apply bg-blue-600 hover:bg-blue-700 btn
+}
+
+.btnDanger {
+    @apply bg-red-700 hover:bg-red-800 btn
+}
+
+.btnUpdate {
+    @apply bg-green-700 hover:bg-green-800 btn
+}
