--- a/src/UI/Input.module.css
+++ b/src/UI/Input.module.css
@@ -1,3 +1,3 @@
 input {
-    @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight
+    @apply shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:border-blue-400 focus:outline-none
 }
